--- a/My Landing Page/src/css/styles.css
+++ b/My Landing Page/src/css/styles.css
@@ -4,7 +4,7 @@ body {
     background: whitesmoke;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-decoration: none;
-    overflow-x: clip;
+    overflow-x: hidden;
     transition: all 0.5s linear;
 }
 body.dark-mode { background: #1a1919; }
